<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/service_time"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/md_grey_500"
        app:cardCornerRadius="100dp"
        android:focusable="true"
        android:clickable="true"
        app:rippleColor="@color/md_blue_100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_status"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_service_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:hint="@string/service_confirm"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/md_green_400"
            app:cornerRadius="100dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_service_laet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:hint="@string/service_late"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/md_grey_400"
            app:cornerRadius="100dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_service_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/service_cancel"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/md_red_700"
            app:cornerRadius="100dp"/>


    </LinearLayout>

</LinearLayout>