<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lnr_hello"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/bluePrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/halo_pak_jamal"
            android:textColor="@color/white"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/cuci_motor"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_open_order"
        android:layout_width="300dp"
        android:layout_height="108dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:background="@drawable/bg_open_order">

        <TextView
            android:id="@+id/tv_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buka_layanan_sekarang"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lnr_hello"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/fl_profile"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_button_home">

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/profil_usaha"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_queue"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginHorizontal="20dp"
            android:layout_toEndOf="@+id/fl_profile"
            android:background="@drawable/bg_button_home">

            <TextView
                android:id="@+id/tv_queue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/antrean"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/fl_stats"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_below="@+id/fl_profile"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_button_home">

            <TextView
                android:id="@+id/tv_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/statistik"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_setting"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_below="@+id/fl_queue"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/fl_stats"
            android:background="@drawable/bg_button_home">

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/pengaturan"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </FrameLayout>

    </RelativeLayout>

</RelativeLayout>